<resources>
    <string name="app_name">SouFreela</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_site">www.github.com/brsanthiago/soufreela</string>
    <string name="folga_ano">Semanas de folga por ano</string>
    <string name="dias_semana">Dias a trabalhar por semana</string>
    <string name="horas_dia">Horas a trabalhar por dia</string>
    <string name="valor_mes">Quanto quer ganhar por mês?</string>
    <string name="save">Salvar</string>
    <string name="empty">Nenhum projeto ainda...</string>
    <string name="try_now">Criar novo</string>


    <string-array name="valor_hora_table_columns">
        <item>valor_mes</item>
        <item>hora_dia</item>
        <item>dia_semana</item>
        <item>folga_semana</item>
        <item>valor_dia</item>
    </string-array>
    <string-array name="projeto_table_columns">
        <item>nome</item>
        <item>data_inicial</item>
        <item>data_final</item>
        <item>hora_dia</item>
        <item>qtde_dia</item>
        <item>valor_projeto</item>
        <item>valor_hora</item>
    </string-array>


</resources>
